# toy_payments_engine

./: .gitignore  Cargo.toml  LICENSE  README.md  transactions_demo.csv
.github/workflows/: ci.yaml
src/: account.rs  lib.rs  payment_engine.rs  transaction.rs
src/tests/: mod.rs  payment_engine.rs
src/transaction/: mod.rs  transaction_modifier.rs  transaction_record.rs  transaction_row.rs  transaction_stream.rs
