[package]
name = "toy_payments_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
log = "0.4"
rust_decimal = { version = "1.41", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0"
